2010-12-09  Mihai Parparita  <mihaip@chromium.org>

        Unreviewed Chromium test expectations update.
        
        Group canvas/philip failures together, fix some expectations (many tests
        that were marked as flaky actually fail consistently).

        * platform/chromium/test_expectations.txt:

2010-12-09  Mihai Parparita  <mihaip@chromium.org>

        Unreviewed Chromium test expectations update.

        Was overly aggressive with r73661, canvas/philip/tests/
        toDataURL.jpeg.alpha.html still fails.

        * platform/chromium/test_expectations.txt:

2010-12-09  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        Expose constructor functions for instanceof checks of WebGL objects
        https://bugs.webkit.org/show_bug.cgi?id=36512

        * fast/canvas/webgl/instanceof-test-expected.txt: Added.
        * fast/canvas/webgl/instanceof-test.html: Added.
        * fast/dom/Window/script-tests/window-property-descriptors.js: Register newly added WebGL objects.
        * fast/dom/Window/window-properties.html: Ditto.
        * fast/dom/script-tests/prototype-inheritance-2.js: Ditto.
        (constructorNamesForWindow):
        * fast/dom/script-tests/prototype-inheritance.js: Ditto.
        * fast/js/script-tests/global-constructors.js: Ditto.

2010-12-09  James Robinson  <jamesr@chromium.org>

        Reviewed by Kenneth Russell.

        [chromium] Compositor needs to manage its VRAM use
        https://bugs.webkit.org/show_bug.cgi?id=49629

        Adds a few tests involving lots of visible image layers.  The tests are designed
        to require slightly more than 64MB of VRAM.

        * platform/chromium-gpu-win/compositing/lots-of-img-layers-expected.checksum: Added.
        * platform/chromium-gpu-win/compositing/lots-of-img-layers-expected.png: Added.
        * platform/chromium-gpu-win/compositing/lots-of-img-layers-expected.txt: Added.